fix(ui): fix inline formula alignment (closes #263)

--- a/quarkdown-html/src/main/resources/render/theme/components/_alignment.scss
+++ b/quarkdown-html/src/main/resources/render/theme/components/_alignment.scss
@@ -12,6 +12,11 @@
     text-align: var(--qd-horizontal-alignment-local);
     text-align-last: center;
   }
+
+  formula {
+    text-align: initial;
+    text-align-last: initial;
+  }
 }
 
 .quarkdown-slides {
